THRIFT-5367 Ruby library crashes when using GC.compact Client: rb Patch: Stan Hu